src/interpreter/snapshots/rlox__interpreter__tests__interpreter@constructor__arguments.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/constructor/arguments.lox
---
init
1
2
