src/interpreter/snapshots/rlox__interpreter__tests__interpreter@constructor__call_init_early_return.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/constructor/call_init_early_return.lox
---
init
init
Foo instance
