src/interpreter/snapshots/rlox__interpreter__tests__interpreter@constructor__default.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/constructor/default.lox
---
Foo instance
