src/interpreter/snapshots/rlox__interpreter__tests__interpreter@constructor__default_arguments.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/constructor/default_arguments.lox
---
Runtime error: [ line 3 ] : Expected 0 arguments but got 3.
