src/interpreter/snapshots/rlox__interpreter__tests__interpreter@constructor__early_return.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/constructor/early_return.lox
---
init
Foo instance
