src/interpreter/snapshots/rlox__interpreter__tests__interpreter@constructor__init_not_method.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/constructor/init_not_method.lox
---
not initializer
