src/interpreter/snapshots/rlox__interpreter__tests__interpreter@constructor__missing_arguments.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/constructor/missing_arguments.lox
---
Runtime error: [ line 5 ] : Expected 2 arguments but got 1.
