src/interpreter/snapshots/rlox__interpreter__tests__interpreter@constructor__return_in_nested_function.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/constructor/return_in_nested_function.lox
---
bar
Foo instance
