src/interpreter/snapshots/rlox__interpreter__tests__interpreter@constructor__return_value.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/constructor/return_value.lox
---
Resolver error(s):
[ line 3 ] : Can't return a value from an initializer.
